--- a/styles/global.css
+++ b/styles/global.css
@@ -9,9 +9,9 @@
   --brand-color-dark: #1d4ed8;
   --bg-color: #0f172a;
   --stroke-color: #1e293b;
-  --text-color-primary: #F1F5F9;
+  --text-color-primary: #f1f5f9;
   --text-color-secondary: #cbd5e1;
-  --font-family: 'Archivo', sans-serif;
+  --font-family: "Archivo", sans-serif;
   --h1: 800 24px/135% var(--font-family);
   --h2: 800 16px/140% var(--font-family);
   --h3: 800 14px/140% var(--font-family);
@@ -21,20 +21,37 @@
 }
 
 body {
-    font: var(--text);
-    color: var(--text-color-primary);
-    background-color: var(--bg-color);
+  font: var(--text);
+  color: var(--text-color-primary);
+  background-color: var(--bg-color);
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 a:hover {
-    color: var(--brand-color-light);
+  color: var(--brand-color-light);
 }
 
-h1, h2, h3 {
-    font: inherit;
+h1,
+h2,
+h3 {
+  font: inherit;
+}
+
+.container {
+  max-width: 1280px;
+  padding-inline: 32px;
+  margin-inline: auto;
+}
+
+/* utility-firts*/
+.grid {
+  display: grid;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
 }
