--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,7 +1,31 @@
-#featured{
-    img{
-        height: 100%;
-        object-fit: cover;
-        border-radius: 4px;
+#featured {
+  img {
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+
+  .card {
+    border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      top: 50%;
+      background: linear-gradient(180deg, transparent 0%, #020617 100%);
     }
+
+    figcaption {
+      position: absolute;
+      bottom: 0;
+      padding: 24px;
+
+      h2 {
+        margin-top: 8px;
+      }
+    }
+  }
 }
